# car_and_bike_demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.docker.md  README.md  docker-compose.yml  pdf_full.txt  pyproject.toml  read_pdf_capabilities.py  requirements.txt  simple_backend_api.py
.cursor/plans/: ev_charger_location_feature_e41bd8de.plan.md  mahindra_bot_core_implementation_73a5fc81.plan.md  mahindra_bot_streamlit_app_dd04ed27.plan.md
data/: consolidated_faqs.json  ev-locations.json  fees_charges.json  icici_faqs.json  new_bikes_list.json  new_cars_list.csv  new_cars_list.json  paisabazaar_car_loan_faqs.json  permit_details.json  policybazaar_faqs.json  rc_transfer_qa.json  rto_faqs.json  shriramgi_faqs.json
data/new_bike_details/: Ampere_Zeal_Ex.json  Ather_450S.json  Ather_Rizta.json  BMW_F_450_GS.json  BMW_G_310_RR.json  (+81 more)
demos/: README.md  demo.py  demo_errors.py  demo_faq.py  demo_faq_auto.py  demo_llm_service.py  demo_mahindra_bot.py
docs/: ORGANIZATION_SUMMARY.md  README.md
scripts/: consolidate_faqs.py  extract_carandbike_new_bike_data.py  extract_carandbike_new_car_data.py  extract_fees_charges.py  extract_icici_faqs.py  extract_paisabazaar_faqs.py  extract_permit_details.py  extract_policybazaar_faqs.py  extract_rc_transfer_qa.py  extract_rto_faq.py  extract_shriramgi_faqs.py
streamlit_apps/: IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  mahindra_bot_app.py  start_app.sh  test_app.py
tests/: __init__.py  test_car_models.py  test_car_service.py  test_data_preprocessor.py  test_faq_service.py  test_serializers.py
(+303 files in other folders)
