[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mahindrabot"
version = "0.1.0"
description = "Mahindra Bot is a bot that helps you to get the details of the cars"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "numpy>=2.3.5",
    "openai>=2.11.0",
    "pandas>=2.3.3",
    "pgeocode>=0.5.0",
    "playwright>=1.57.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "streamlit[auth]>=1.52.1",
    "thefuzz>=0.22.1",
    "langfuse>=3.10.6",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "langchain-core>=1.2.0",
    "pytest>=9.0.2",
    "tqdm>=4.67.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mahindrabot"]
